add filter by user group
